# DSA-in-C

./: README.md
BST/: CMakeLists.txt  bst.c  bst.h  main.c  test.c
BinarySearch/: CMakeLists.txt  binary_search.c  binary_search.h  main.c
CountingSort/: CMakeLists.txt  counting_sort.c  counting_sort.h  main.c
DynamicArray/: CMakeLists.txt  dynamic_array.c  dynamic_array.h  main.c  test.c
HashTable/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  hash_table.c  hash_table.h  hash_table_tests  test.c
HashTable/Testing/Temporary/: CTestCostData.txt
Heap/: CMakeLists.txt  heap.c  heap.h  main.c  test.c
InsertionSort/: CMakeLists.txt  insertion_sort.c  insertion_sort.h  main.c
LinkedLists/: CMakeLists.txt  linked_lists.c  linked_lists.h  main.c  test.c
MergeSort/: CMakeLists.txt  main.c  merge_sort.c  merge_sort.h
Queue/QueueViaCircularArray/: CMakeLists.txt  main.c  queue.c  queue.h  test.c
Queue/QueueViaLinkedLists/: main.c  queue.c  queue.h  test.c
QuickSort/: CMakeLists.txt  main.c  quick_sort.c  quick_sort.h
SelectionSort/: CMakeLists.txt  main.c  selection_sort.c  selection_sort.h
